--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "python-template"
+name = "chat-ai-server"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8.0,<3.9"
