--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,15 @@
+[build-system]
+build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+
+[tool]
 [tool.poetry]
+authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]
+description = ""
 name = "chat-ai-server"
 version = "0.1.0"
-description = ""
-authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]
-
 [tool.poetry.dependencies]
-python = ">=3.8.0,<3.9"
-numpy = "^1.22.2"
 Flask = "^2.1.2"
-
+numpy = "^1.22.2"
+python = "^3.8"
 [tool.poetry.dev-dependencies]
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
