--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,6 @@ Flask = "^2.1.2"
 numpy = "^1.22.2"
 python = "^3.8"
 gevent = "^21.12.0"
+keras = "^2.9.0"
+sklearn = "^0.0"
 [tool.poetry.dev-dependencies]
